tests/snapshots/tui/dataset_question_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare                            rust_expert "
"╭ data ──────────────────────────────────────────────╮╭ question ──────────────────────────────────────────────────────╮"
"│ ▼ ownership  2 sub, 5 q, 4 a                       ││ Why can't a &mut and a & borrow coexist?                       │"
"│   ▼ Borrowing  3 q, 2 a                            ││                                                                │"
"│       [a] What happens to a borrow when the owner  ││ id c8f4…c849  answered, excluded: truncated                    │"
"│       [x] Why can't a &mut and a & borrow coexist? ││                                                                │"
"│       [ ] When does NLL end a borrow?              ││ model deepseek-r1  in 312  out 1840                            │"
"│   ▶ Lifetimes  1 q, 1 a                            ││ finish length  reasoning raw  excluded: truncated              │"
"│   ▶ (missing subtopic)  1 q, 1 a                   ││ ── reasoning ──                                                │"
"│   traits  0 sub, 0 q, 0 a                          ││ Aliasing and mutation.                                         │"
"│ ▶ old_topic (not configured)  1 sub, 1 q, 1 a      ││ ── answer ──                                                   │"
"│                                                    ││ Because                                                        │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"╰ / filter ──────────────────────────────────────────╯╰───────────────────────────────────────────────────────── 10/10 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete · [ ] parts                                  v#.#.#  ? help "
