tests/snapshots/tui/dataset_question_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare"
"╭ data ────────────────────────────╮╭ question ────────────────────────────────╮"
"│ ▼ ownership  2 sub, 5 q, 4 a     ││ Why can't a &mut and a & borrow coexist? │"
"│   ▼ Borrowing  3 q, 2 a          ││                                          │"
"│       [a] What happens to a borr ││ id c8f4…c849  answered, excluded:        │"
"│       [x] Why can't a &mut and a ││ truncated                                │"
"│       [ ] When does NLL end a bo ││                                          │"
"│   ▶ Lifetimes  1 q, 1 a          ││ model deepseek-r1  in 312  out 1840      │"
"│   ▶ (missing subtopic)  1 q, 1 a ││ finish length  reasoning raw  excluded:  │"
"│   traits  0 sub, 0 q, 0 a        ││ truncated                                │"
"│ ▶ old_topic (not configured)     ││ ── reasoning ──                          │"
"│                                  ││ Aliasing and mutation.                   │"
"│                                  ││ ── answer ──                             │"
"│                                  ││ Because                                  │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"╰ / filter ────────────────────────╯╰─────────────────────────────────── 12/12 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete      v#.#.#  ? help "
