tests/snapshots/tui/dataset_stats_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"╭ data ────────────────────────────╮╭ stats: ownership ────────────────────────╮"
"│ ▶ ownership  2 sub, 5 q, 4 a     ││ subtopics        2 / 2                   │"
"│   traits  0 sub, 0 q, 0 a        ││ questions        5 / 6                   │"
"│ ▶ old_topic (not configured)     ││ answers          4                       │"
"│                                  ││ unanswered       1                       │"
"│                                  ││ usable           3                       │"
"│                                  ││ excluded         1 (truncated 1)         │"
"│                                  ││ orphaned         0                       │"
"│                                  ││ question chars   mean 37, max 49         │"
"│                                  ││ answer chars     mean 80, max 274        │"
"│                                  ││ reasoning chars  mean 99, max 176        │"
"│                                  ││ tokens           in 1248, out 7360       │"
"│                                  ││ rejected         1                       │"
"│                                  ││                                          │"
"│                                  ││ all topics       6 questions, 5 answers  │"
"│                                  ││ train / eval     2 / 1 (expected)        │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"╰ / filter ────────────────────────╯╰──────────────────────────────────────────╯"
" j/k move · l open · / filter · s stats · e edit · d delete      v#.#.#  ? help "
