tests/snapshots/tui/help_compare_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare                            rust_expert "
"╭ compares ──────────────────────────────────────────────────────╮╭ summary ───────────────────────────────────────────╮"
"│ run                            quant  judge        win+tie n   ││ win 4  tie 1  loss 2  unparsed 1                   │"
"│ demo_20261006-100000           Q4_K_M parent       71%     8   ││ latency p50 1.00s  p95 2.00s                       │"
"│                                                                ││ per 1k requests: parent $0.90, child $0.12         │"
"│                                                                ││ 1 x NVIDIA A40 (ubuntu-cuda-13.4-x64)              │"
"╰────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────╯"
"╭ questions: all ──────────────────────────────╮╭ q1  win ─────────────────────────────────────────────────────────────╮"
"│ ✓ q1 Question 1: w                                                                                                   │"
"│ ✓ q2 Question 2: w ╭ Keys ──────────────────────────────────────────────────────────────────────╮                    │"
"│ ✓ q3 Question 3: w │ Everywhere                                                                 │ s                  │"
"│ ✓ q4 Question 4: w │ 1-6, Tab, Shift-Tab        switch view                                     │                    │"
"│ = q5 Question 5: w │ ?                          this help (Esc, ? or q closes it)               │                    │"
"│ ✗ q6 Question 6: w │ q, Ctrl-C                  quit                                            │                    │"
"│ ! q7 Question 7: w │ R                          reload the data files and runs                  │                    │"
"│ ? q8 Question 8: w │ g                          open the overbrainer repository in a browser    │                    │"
"│                    │ r, A                       run auto or a stage (asks which); A: auto       │                    │"
"│                    │ y, n Esc Enter             in a dialog: confirm, cancel (the default, n)   │                    │"
"│                    │                                                                            │                    │"
"│                    │ Compare                                                                    │                    │"
"│                    │ k j, Up Down               move in the focused list                        │                    │"
"│                    │ h l, Left Right            focus the compares or the questions             │                    │"
"│                    │ PgUp PgDn, [ ]             scroll the detail; [ ] jumps part to part       │                    │"
"│                    │ f                          filter: all, losses, ties, wins, errors         │                    │"
"│                    │ C                          compare the newest run with a GGUF (asks first) │                    │"
"│                    │ J                          judge the selected compare again (asks first)   │                    │"
"│                    │ c                          cancel the compare running (asks first)         │                    │"
"│                    │                                                                            │                    │"
"│                    │ e, d, r, A, t, h, C and J are refused while a stage, an edit or a training │                    │"
"│                    │ start runs in this TUI; the TUI also holds the project lock, so no other   │                    │"
"│                    │ overbrainer command writes to the project meanwhile.                       │                    │"
"│                    ╰────────────────────────────────────────────────────────────────────────────╯                    │"
"│                                                                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"╰──────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────── 10/10 ╯"
" Esc close                                                                                                       ? help "
