tests/snapshots/tui/help_compare_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
" ╭ Keys ──────────────────────────────────────────────────────────────────────╮ "
" │ Everywhere                                                                 │ "
" │ 1-6, Tab, Shift-Tab        switch view                                     │ "
" │ ?                          this help (Esc, ? or q closes it)               │ "
" │ q, Ctrl-C                  quit                                            │ "
" │ R                          reload the data files and runs                  │ "
" │ g                          open the overbrainer repository in a browser    │ "
" │ r, A                       run auto or a stage (asks which); A: auto       │ "
" │ y, n Esc Enter             in a dialog: confirm, cancel (the default, n)   │ "
" │                                                                            │ "
" │ Compare                                                                    │ "
" │ k j, Up Down               move in the focused list                        │ "
" │ h l, Left Right            focus the compares or the questions             │ "
" │ PgUp PgDn, [ ]             scroll the detail; [ ] jumps part to part       │ "
" │ f                          filter: all, losses, ties, wins, errors         │ "
" │ C                          compare the newest run with a GGUF (asks first) │ "
" │ J                          judge the selected compare again (asks first)   │ "
" │ c                          cancel the compare running (asks first)         │ "
" │                                                                            │ "
" │ e, d, r, A, t, h, C and J are refused while a stage, an edit or a training │ "
" │ start runs in this TUI; the TUI also holds the project lock, so no other   │ "
" │ overbrainer command writes to the project meanwhile.                       │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
