tests/snapshots/tui/help_logs_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"  Logs · INFO and above                                                                                                 "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                     ╭ Keys ──────────────────────────────────────────────────────────────────────╮                     "
"                     │ Everywhere                                                                 │                     "
"                     │ 1 2 3 4 5, Tab, Shift-Tab  switch view                                     │                     "
"                     │ ?                          this help (Esc, ? or q closes it)               │                     "
"                     │ q, Ctrl-C                  quit                                            │                     "
"                     │ R                          reload the data files and runs                  │                     "
"                     │ g                          open the overbrainer repository in a browser    │                     "
"                     │ r, A                       run auto or a stage (asks which); A: auto       │                     "
"                     │ y, n Esc Enter             in a dialog: confirm, cancel (the default, n)   │                     "
"                     │                                                                            │                     "
"                     │ Logs                                                                       │                     "
"                     │ k j, Up Down, PgUp PgDn    scroll                                          │                     "
"                     │ G, End                     follow the newest lines                         │                     "
"                     │ f                          cycle level: error, warn, info, debug, trace    │                     "
"                     │ x                          export the shown lines to .overbrainer/         │                     "
"                     │                                                                            │                     "
"                     │ e, d, r, A and t are refused while a stage, an edit or a training start    │                     "
"                     │ runs in this TUI; the TUI also holds the project lock, so no other         │                     "
"                     │ overbrainer command writes to the project meanwhile.                       │                     "
"                     ╰────────────────────────────────────────────────────────────────────────────╯                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Esc close                                                                                                       ? help "
