tests/snapshots/tui/logs_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"  Logs · INFO and above                                                                                                 "
"                                                                                                                        "
"  14:12:21 INFO  cli::progress: answers: 400 to process                                                                 "
"  14:12:23 WARN  cli::progress: answers: 77aa: 429 Too Many Requests; retrying in 4.0s                                  "
"  14:12:24 ERROR cli::progress: answers: 77aa failed: the answer is not a JSON array of strings                         "
"  14:12:26 INFO  cli::progress: answers: 40/400                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" j/k scroll · G follow · f level                                                                         v#.#.#  ? help "
