tests/snapshots/tui/logs_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"  Logs · INFO and above                                                         "
"                                                                                "
"  14:12:21 INFO  cli::progress: answers: 400 to process                         "
"  14:12:23 WARN  cli::progress: answers: 77aa: 429 Too Many Requests; retrying  "
"  14:12:24 ERROR cli::progress: answers: 77aa failed: the answer is not a JSON  "
"  14:12:26 INFO  cli::progress: answers: 40/400                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" j/k scroll · G follow · f level · s source · x export           v#.#.#  ? help "
